--- a/src/updatedCSS.css
+++ b/src/updatedCSS.css
@@ -538,6 +538,22 @@ header h1 {
   text-decoration: underline;
 }
 
+#addClock {
+  all: unset;
+  cursor: pointer;
+  font: inherit;
+  color: inherit;
+  display: inline;
+  vertical-align: baseline;
+  padding: 0;
+  margin: 0;
+}
+
+#addClock:hover {
+  text-decoration: underline;
+}
+
+
 .current-DJ {
   display: flex;
   align-items: center;
