--- a/src/updatedCSS.css
+++ b/src/updatedCSS.css
@@ -1166,7 +1166,7 @@ header h1 {
 
 .showTitleImg {
   width: 80px;
-  height: 100%;
+  height: 80px;
   border-radius: 50%;
   overflow: hidden;
   background-color: var(--Light-Gray);
